# investmate

./: .env.example  .gitignore  AWS_DEPLOYMENT.md  CHANGELOG.md  CLAUDE.md  CLAUDE_FULL.md  LICENSE  METRICS.md  Makefile  TODO.md  ai_analysis_reform_plan.md  pyproject.toml  requirements.md
docs/: AWS_BILLING_ANALYSIS.md  DEEPDIVE_FEATURE.md  DEVELOPMENT_PROCESS_BEGINNER.md  DEVELOPMENT_PROCESS_EXPERT.md  UPGRADE_DOMAINS.md
docs/plans/: master_plan.md  phase1_plan.md  phase2_plan.md  (+1 more)
scripts/: auto_improve.sh  run_deepdive.sh  run_pipeline.sh  run_weekly.sh  seed_watchlist.py
src/: config.py  deepdive_pipeline.py  main.py  pipeline.py  weekly_pipeline.py
tests/: conftest.py  test_agent_accuracy_tracking.py  test_agents.py  test_ai_cache.py  test_ai_constants.py  test_ai_feedback.py  test_ai_validator.py  test_alert_persistence.py  test_analysis.py  test_assembler.py  test_assembler_integration.py  test_backtest.py  test_backtest_fix.py  test_calibrator.py  test_calibrator_condition.py  test_calibrator_integration.py  test_chat.py  test_circuit_breaker.py  test_claude_analyzer.py  test_cli.py  test_comparator.py  test_config.py  test_config_extended.py  test_cost_tracker.py  test_counterfactual.py  test_daily_report.py  test_data_enricher.py  test_data_utils.py  test_date_map.py  test_db.py  test_debate.py  test_debate_consensus_penalty.py  test_deepdive_ai.py  test_deepdive_ai_extended.py  test_deepdive_alerts.py  test_deepdive_catalysts.py  test_deepdive_debate_parallel.py  test_deepdive_diff.py  test_deepdive_execution_guide.py  test_deepdive_feedback_loop.py  (+83 more)
(+158 files in other folders)
