[project]
name = "investmate"
version = "0.1.0"
description = "S&P 500 AI 투자 가이드 — 데일리 배치 파이프라인"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "yfinance>=0.2",
    "pandas>=2.0",
    "numpy>=1.24",
    "ta>=0.11",
    "beautifulsoup4>=4.12",
    "requests>=2.31",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "lxml>=5.0",
    "lightgbm>=4.0",
    "scikit-learn>=1.4",
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.42.0",
    "jinja2>=3.1.6",
    "tenacity>=8.2",
    "fpdf2>=2.7",
    "matplotlib>=3.8",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
]

[project.scripts]
investmate = "src.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 65
